--- a/.github/workflows/build-windows-exe.yml
+++ b/.github/workflows/build-windows-exe.yml
@@ -31,6 +31,11 @@ jobs:
             --name send_report `
             --add-data "src\templates;templates" `
             --hidden-import oracledb `
+            --hidden-import cryptography `
+            --hidden-import cryptography.hazmat.backends `
+            --hidden-import cryptography.hazmat.backends.openssl `
+            --hidden-import cryptography.hazmat.bindings._rust `
+            --hidden-import _cffi_backend `
             src\main.py
 
       - name: Upload EXE artifact
